--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
-  "name": "new-api-deploy",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "express": "^4.17.1",
-    "firebase-admin": "^9.12.0"
-  }
+    "name": "new-mail-api",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "express": "^4.17.1",
+        "firebase-admin": "^9.12.0"
+    },
+    "engines": { "node": "v14.15.3" }
 }
