--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "express": "^4.17.1",
-        "firebase-admin": "^9.12.0"
+        "express": "^4.17.1"
     },
-    "engines": { "node": "v14.15.3" }
+    "engines": {
+        "node": "v14.15.3"
+    }
 }
