--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "express": "^4.17.1"
+        "express": "^4.17.1",
+        "nodemailer": "^6.7.0"
     },
     "engines": {
         "node": "v14.15.3"
